Project

General

Profile

Actions

Bug #9677

closed

osd_disk_thread_ioprio_class is ignored

Added by Loïc Dachary over 9 years ago. Updated over 9 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
common
Target version:
-
% Done:

100%

Source:
other
Tags:
Backport:
giant, firefly
Regression:
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Actions #1

Updated by Loïc Dachary over 9 years ago

  • Status changed from 12 to 7
  • % Done changed from 0 to 80
Actions #2

Updated by Loïc Dachary over 9 years ago

  • Status changed from 7 to Pending Backport
  • Backport set to giant, firefly
Actions #3

Updated by Loïc Dachary over 9 years ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 80 to 100
Actions

Also available in: Atom PDF